# cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
backupchan_cli/: config.py  main.py  utility.py
backupchan_cli/commands/: backup.py  config.py  preset.py  recyclebin.py  target.py
